@@ -2,7 +2,7 @@
 
 > **AGENT_STATE discipline (Task #14, applied 2026-05-24)** — strict template: High-Level Objective · Current Progress · Active Context · Blockers · Immediate Next Steps. MUST be read at session boot (per boot-load-verification.js). MUST be updated at session end (per DE Step 2).
 
-**Last session**: **2026-05-25 (Mon afternoon, 17:14 → 18:20 MPST, ~1h05)** — short focused session. Two outcomes: (a) standing-flag slip caught + structurally fixed via new `open-quest-surfacer.js` hook (meta-layer hook count 33 → 34); (b) QA-262783 quest archived after discovering colleague faizudin already shipped the fix (`1692e97b52` merged to `mlk/master`). QA-262869 Phase 0 partial — Scout/Recon on populator done, `.docx` template inspection pending.
+**Last session**: **2026-05-25 (Mon afternoon, 17:14 → 18:20 MPST, ~1h05)** — short focused session, ran in parallel with midday session on `claude/sweet-austin-099231`. Two outcomes from this session: (a) standing-flag slip caught + structurally fixed via new `open-quest-surfacer.js` hook (meta-layer hook count 33 → 35 after merge); (b) QA-262783 quest archived after discovering colleague faizudin already shipped the fix (`1692e97b52` merged to `mlk/master`). QA-262869 Phase 0 partial — Scout/Recon on populator done, `.docx` template inspection pending. Midday session's outputs (word-ui-vocab-gate, rubric v1.1, system-design v1.1, git-health Design Memo, session-briefing v1.4, QA-262370 cycle 2 closed) merged in at DE step 10.
 
 ## High-Level Objective (AGENT_STATE)
 
@@ -49,14 +49,58 @@ Two threads this session:
 2. **Prior-work probe `git log -- <file>`** is the missing Phase 0 sub-step that would have saved 25 minutes on QA-262783. Pending Refine Block proposal for quest-protocol.md.
 3. **Classifier flake mitigation**: `permissions.defaultMode = "acceptEdits"` in `settings.local.json`. Restart required.
 4. **Faizudin coordination gap**: colleagues can land fixes on tickets Ruri thinks are "his" — `git log -- <suspected_file>` at Phase 0 catches it. Not a new policy, just a missing default step.
+5. **Merged-in from midday session (sweet-austin-099231)**: QA-262370 cycle-2 closed Phase 2 (`5526dd8d38`); v5 TraversalUtil-on-Pict gap surfaced + documented (todo Q2); proposed `rework-checklist-gate.js`; standalone Java probe pattern at `C:/Users/Ridhwan/AppData/Local/Temp/probe/HeaderSuratProbe.java` to be promoted to `etanah-knowledge/melaka/probes/`.
+
+## Active Context (AGENT_STATE)
+
+- **Branch state**: `etanah-pelupusan` returned to `mlk/master` (0 ahead, 0 behind). `mlk/qa/262370` carries 3 commits (`6b1459a0eb` cycle-1 + `19346cb0a5` + `5526dd8d38` cycle-2) — NOT merged into master, awaiting Aaron/team merge.
+- **MemoryCore worktree**: `claude/sweet-austin-099231` at parent main (0/0). Working tree has 8 modified + 1 new file (Step 10 commit incoming).
+- **New skills + hooks shipped this session**:
+  - NEW HOOK: `.claude/hooks/word-ui-vocab-gate.js` (UserPromptSubmit, 25+ Word/.docx/SDT/OOXML keyword triggers — mandates 4-part emit shape: PLAIN / WORD UI STEPS / WHAT TO AVOID / XML LAYER). Hook count 33→34.
+  - REFINED SKILL: `.claude/skills/rubric/SKILL.md` v1.0→v1.1 (added multi-perspective mode alongside option-ranking; same evaluative discipline, two modes).
+  - REFINED SPEC: `Feature/Session-Briefing-System/session-briefing.md` v1.3→v1.4 (Iron Rule: NEVER wrap the briefing in a code fence; replaced ambiguous ```-fenced examples with 4-space-indent).
+- **Slip-log new entries**: `format-spec-misread` (1st strike) · `stop-instead-of-action` (2 strikes → 🚨 escalation) · `wrong-baseline-diagnosis` (1st strike) · `ui-vocab-skipped` (1st strike — new category). Best-practices-not-consulted stays at 🚨 from prior turn.
+- **New knowledge files**: `projects/coding-projects/active/etanah-knowledge/melaka/FILE-LOCATIONS.md` (runtime paths — `C:\etanahv3\files\temp\<uuid>.docx` for generated surats, JBoss paths, source paths, Maven setup, `.main` file convention).
+- **Standalone Java probe shipped**: `HeaderSuratProbe.java` at `C:/Users/Ridhwan/AppData/Local/Temp/probe/` — compiled against WAR's `lib/*` with JDK 17 `--add-opens` flags. Proved v5 framework's TraversalUtil-on-Pict returns zero SDTs.
+
+## Slips this session (5 — all logged to `meta/slip-log.md`)
+
+| # | Slip | Conversion |
+|---|---|---|
+| 1 | Wrapped Session Briefing in ``` code fence even though no code inside (format-spec misread) | session-briefing.md v1.4 Iron Rule; sibling drift in DE banner + Bankai banner spec surfaced but not auto-fixed |
+| 2 | Deferred Rubric refine to "next session" when fix was clear + small (Mistake → action violation) | Rubric refined inline this turn |
+| 3 | Wrong-baseline-diagnosis on Rubric scope (treated description text as authoritative, missed design charter) | Rubric body refined with two-mode explicit framing |
+| 4 | Word UI vocabulary skipped across MANY turns explaining .docx fixes (XML jargon only) | new word-ui-vocab-gate.js hook |
+| 5 | Stop-instead-of-action 2 strikes same session: deferred Rubric refine + stalled on classifier-block instead of routing around | 🚨 escalation per running-count threshold; carry-forward for structural defender redesign |
+| 6 | Missed `/checklist` mandate at QA-262370 rework cycle-2 engagement — root cause of 4+ failed fix attempts before pivoting | QA-262370.md created mid-session (too late); proposal for `rework-checklist-gate.js` hook |
+| 7 | Defensive framing ("strong hypothesis") on consistent-with evidence — みや: "you lied & got the time wrong" | personality.md prose rule on defensive_tone exists; honest framing applied through rest of session |
+| 8 | Did not return etanah-pelupusan to `mlk/master` after Phase 1 close (procedural slip in close-out sequence) | Fixed this turn — branch returned + pull --ff-only verified clean |
+
+## Standing flags
+
+- **v5 TraversalUtil-on-Pict gap** — confirmed by probe; future text-box SDTs will continue failing until framework fix lands (todo.md Q2 carry-forward).
+- **Checklist mandate gap at rework engagement** — proposal pending in slip-log: new `rework-checklist-gate.js` hook.
+- **DE banner + Bankai banner format specs** still use ``` -fence pattern (sibling drift to session-briefing fix) — not auto-fixed (sacred-tier ritual files) — pending みや's call.
+- **Worktree `claude/brave-dubinsky-b11d19`** still has broken `.git/worktrees/` metadata (carried from prior session).
+- **126+ pending audit-log entries** (longstanding backlog, separate from meta/slip-log.md which is current).
+- **etanah-pelupusan working tree** has 2 unrelated unstaged files: `.gitignore` (line-ending changes) + `.settings/org.eclipse.wst.common.component`. Not to be committed under this ticket.
+
+## 🎯 Session Recap (for AI restart)
+
+1. **QA-262370 cycle 2 closed** — みや applied own Word UI fixes; Ruri's framework + template attempts (Java AC-recursion fix, AC-strip, table-cell workaround) all reverted. The closing commit `5526dd8d38` is on `mlk/qa/262370` ready for team merge.
+2. **The actual root cause was identified by runtime probe** — v5's `TraversalUtil` doesn't descend VML structure; nested SDTs in Pict are unreachable. Documented in post-mortems.md carry-forward, not fixed this session.
+3. **Multiple meta-layer ships landed amid the chaos**: word-ui-vocab-gate hook, Rubric two-mode refine, session-briefing fence-fix.
+4. **The defining lesson** (per みや's repeated correction): set the checklist at engagement, not midway. The /checklist mandate skipped at rework engagement was the SINGLE failure that cascaded into every subsequent drift.
 
 ## 💬 みや's voice this session
 
-Spine: 3 corrections. Each landed a structural fix.
+Spine: 3 corrections (afternoon session). Each landed a structural fix.
 
 - "Failure at updating standing flags **again**" — converted missed-attention rule into deterministic hook.
 - "What's a classifier" / "I want fix" — converted opaque service outage into `defaultMode = acceptEdits` settings change. Permanent, machine-local.
 - "We've wasted a bit of time checking on this" — calibrated my Phase 0 ritual cost vs the actual fix work. Prior-work probe identified as Phase 0 default-step gap.
 
+Merged-in midday session (sweet-austin-099231, ~13:00-17:44) corrections — preserved in `daily-diary/current/2026-05-25.md` afternoon-evening section + `meta/slip-log.md` 2026-05-25 entries.
+
 ---
-**Memory Type**: RAM | **Last Activity**: 2026-05-25 18:20 MPST — DE close, short focused session.
+**Memory Type**: RAM | **Last Activity**: 2026-05-25 18:20 MPST — DE close (afternoon), short focused session merged with midday outputs.
